# cefal

./: .clang-format  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt
benchmarks/filterable/: benchmark_filter.cpp  benchmark_filter_std_containers.cpp  benchmark_filter_std_ranges.cpp
benchmarks/functor/: benchmark_map.cpp  benchmark_map_std_containers.cpp  benchmark_map_std_ranges.cpp
benchmarks/helpers/: benchmark_main.cpp  expensive.h
cmake/: cefal-config.cmake
include/cefal/: cefal  common.h  converter.h  everything.h  filterable.h  foldable.h  functor.h  monad.h  monoid.h
include/cefal/detail/: common_concepts.h  instantiator.h  std_concepts.h  type_traits.h
include/cefal/helpers/: inner_type.h  nums.h  std_containers.h  std_ranges.h
include/cefal/instances/: std_all.h  std_containers.h  std_containers_functor.h  std_containers_monad.h  std_optional.h  std_optional_functor.h  std_optional_monad.h  std_variant.h  std_variant_monad.h  with_functions.h  with_functions_functor.h  with_functions_monad.h
include/cefal/instances/converter/: from_self.h  from_std_containers.h  from_std_optional.h
include/cefal/instances/filterable/: from_foldable.h  std_optional.h  std_ranges.h  with_functions.h
include/cefal/instances/foldable/: std_containers.h  std_ranges.h  with_functions.h
include/cefal/instances/functor/: from_foldable.h  std_optional.h  std_ranges.h  with_functions.h
include/cefal/instances/monad/: from_foldable.h  std_optional.h  with_functions.h
include/cefal/instances/monoid/: basic_types.h  std_containers.h  std_optional.h  with_functions.h
src/: dummy.cpp
tests/: CMakeLists.txt  counter.h  test_main.cpp
tests/converter/: test_from_self.cpp  test_from_std_containers.cpp  test_from_std_optional.cpp
tests/filterable/: test_from_foldable.cpp  test_std_optional.cpp  test_std_ranges.cpp  test_with_functions.cpp
tests/foldable/: test_std_containers.cpp  test_std_ranges.cpp  test_with_functions.cpp
tests/functor/: test_from_foldable.cpp  test_std_optional.cpp  test_std_ranges.cpp  test_with_functions.cpp
tests/helpers/: counter.h  ranges_helpers.h  test_helpers.h
tests/monad/: test_from_foldable.cpp  test_std_optional.cpp  test_with_functions.cpp
tests/monoid/: test_basic_types.cpp  test_std_containers.cpp  test_std_optional.cpp  test_with_functions.cpp
